# xevdb

./: .gitignore  INTRODUCTION.md  README.md  USER_GUIDE.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
demos/picorv32/: README.md  run.sh
docs/: kernel-reference-tutorial.md  riscv-reference-tutorial.md  riscv-tutorial.cast
examples/: counter.sv
examples/c906_opensearch/: .gitignore  TUTORIAL.md  run_tutorial.sh  vcd_scope_filter.py
examples/simple/: counter.vcd
scripts/: gen_kernel_data.py  gen_riscv_data.py
src/xevdb/: __init__.py  bugs.py  cache.py  cli.py  db.py  decode.py  diff.py  fst.py  kernel.py  mcp_server.py  parser.py  prompts.py  riscv.py  seed_prompts.py  show.py  sim.py  sv.py  xtrace.py  xztrace.py
tests/: test_backend.py  test_bugs.py  test_cli_gating.py  test_decode.py  test_diff.py  test_fst.py  test_kernel_data.py  test_mcp_server.py  test_opensearch_backend.py  test_opensearch_bugs.py  test_opensearch_docs.py  test_opensearch_integration.py  test_opensearch_kernel.py  test_opensearch_parity.py  test_opensearch_read.py  test_opensearch_riscv.py  test_opensearch_riscv_docs.py  test_opensearch_schema.py  test_riscv_data.py  test_smoke.py  test_xtrace.py  test_xztrace.py
xevdb_ai_debug/: AGENTS.md  README.md  api.py  docker-compose.opensearch.yml  models.py  requirements.txt  run_demo.sh  storage.py  xtrace_writer.py
xevdb_ai_debug/agents/: orchestrator.py  protocol_agent.py
xevdb_ai_debug/connectors/: __init__.py  base_connector.py  chipscopy_connector.py  claude_connector.py  codex_connector.py  xevdb_connector.py
xevdb_ai_debug/dashboard/: index.html
xevdb_ai_debug/examples/: failing_axi_capture.json  (+1 more)
xezim-core/xezim-parser/: Cargo.toml
xezim-core/xezim-parser/src/: main.rs
xezim-core/xezim-parser/src/diagnostics/: mod.rs
(+26 files in other folders)
